# job-jigsaw

./: .env.example  .gitignore  LICENSE  README.md  compose.yaml  plan.md
.github/workflows/: build.yml
data/: jobs.db-shm  jobs.db-wal
lib/: config.py  email_utils.py  proposal.py  telegram.py
notifier/: Dockerfile  notify.py  poll_replies.py  pyproject.toml
profile-editor/: Dockerfile  main.py  pyproject.toml
profile-editor/templates/: index.html
scraper/: Dockerfile  pyproject.toml  quality_gate.py  query_gen.py  scrape.py  trigger_server.py
scraper/sources/: ats.py  rss.py
scripts/: smoke_test_jina.py
tests/: conftest.py  conftest_frontend.py  test_feedback_profile.py  test_integration_feedback.py  test_integration_llm.py  test_integration_scoring.py  test_notifier_rerank.py  test_profile_editor.py  test_scraper_improvements.py
tests/baselines/: README.md  feedback_summary_quality.json  score_distribution.json
tests/eval/: test_eval_engagement_e.py  test_eval_profile_b.py  test_eval_scraper_a.py
tests/frontend/: conftest.py  test_frontend_a.py  test_frontend_b.py  test_frontend_baseline.py  test_frontend_behavioral.py  test_frontend_e.py
tests/unit/: test_engagement_e.py  test_profile_b.py  test_schema_parity.py  test_scraper_a.py
