[project]
name = "scraper"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "python-jobspy>=1.1.82",
    "requests>=2.32.3",
    "pyyaml>=6.0.2",
    "pydantic-settings>=2.6.1",
]

[tool.uv]
# python-jobspy pins NUMPY==1.26.3 which has no Python 3.13 wheels.
# Override to numpy 2.x which ships pre-built cp313 wheels.
override-dependencies = ["numpy>=2.0.0"]
